--- a/applications/source/load-generator-source/pom.xml
+++ b/applications/source/load-generator-source/pom.xml
@@ -21,11 +21,6 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
@@ -40,6 +35,7 @@
                 <configuration>
                     <application>
                         <name>load-generator</name>
+                        <functionDefinition>loadGeneratorSupplier</functionDefinition>
                         <type>source</type>
                         <version>${project.version}</version>
                         <configClass>
