--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -13,12 +13,12 @@
 	<parent>
 		<groupId>org.springframework.cloud.stream.app</groupId>
 		<artifactId>stream-applications-build</artifactId>
-		<version>1.2.0-SNAPSHOT</version>
+		<version>1.2.0</version>
 		<relativePath/>
 	</parent>
 
 	<properties>
-		<revision>1.2.0-SNAPSHOT</revision>
+		<revision>1.2.0</revision>
 	</properties>
 
 	<modules>
