Quiet down integration test logging

--- a/applications/sink/geode-sink/pom.xml
+++ b/applications/sink/geode-sink/pom.xml
@@ -33,14 +33,16 @@
             <artifactId>lombok</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-geode-test</artifactId>
-            <version>${spring-data-geode-test.version}</version>
+            <groupId>org.springframework.geode</groupId>
+            <artifactId>spring-geode-starter-logging</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.geode</groupId>
+            <artifactId>spring-geode-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
