--- a/functions/consumer/geode-consumer/pom.xml
+++ b/functions/consumer/geode-consumer/pom.xml
@@ -32,9 +32,13 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-geode-test</artifactId>
-            <version>${spring-data-geode-test.version}</version>
+            <groupId>org.springframework.geode</groupId>
+            <artifactId>spring-geode-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.geode</groupId>
+            <artifactId>spring-geode-starter-logging</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
