--- a/functions/supplier/geode-supplier/pom.xml
+++ b/functions/supplier/geode-supplier/pom.xml
@@ -53,11 +53,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-geode-test</artifactId>
-            <version>${spring-data-geode-test.version}</version>
+            <groupId>org.springframework.geode</groupId>
+            <artifactId>spring-geode-starter-logging</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.geode</groupId>
+            <artifactId>spring-geode-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
