Fix auto-import of Kafka apps in SCDF

--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
@@ -1,5 +1,5 @@
 source.cdc-debezium=maven://org.springframework.cloud.stream.app:cdc-debezium-source-kafka:@apps.version@
-source.cdc-debezium.metadata=maven://org.springframework.cloud.stream.app:cdc-debezium-source-kafka:jar:metadata::@apps.version@
+source.cdc-debezium.metadata=maven://org.springframework.cloud.stream.app:cdc-debezium-source-kafka:jar:metadata:@apps.version@
 source.file=maven://org.springframework.cloud.stream.app:file-source-kafka:@apps.version@
 source.file.metadata=maven://org.springframework.cloud.stream.app:file-source-kafka:jar:metadata:@apps.version@
 source.ftp=maven://org.springframework.cloud.stream.app:ftp-source-kafka:@apps.version@
@@ -18,7 +18,7 @@ source.mail=maven://org.springframework.cloud.stream.app:mail-source-kafka:@apps
 source.mail.metadata=maven://org.springframework.cloud.stream.app:mail-source-kafka:jar:metadata:@apps.version@
 source.mongodb=maven://org.springframework.cloud.stream.app:mongodb-source-kafka:@apps.version@
 source.mongodb.metadata=maven://org.springframework.cloud.stream.app:mongodb-source-kafka:jar:metadata:@apps.version@
-source.mqtt=maven://org.springframework.cloud.stream.app:mqtt-source-kafkaapps.version@
+source.mqtt=maven://org.springframework.cloud.stream.app:mqtt-source-kafka:@apps.version@
 source.mqtt.metadata=maven://org.springframework.cloud.stream.app:mqtt-source-kafka:jar:metadata:@apps.version@
 source.rabbit=maven://org.springframework.cloud.stream.app:rabbit-source-kafka:@apps.version@
 source.rabbit.metadata=maven://org.springframework.cloud.stream.app:rabbit-source-kafka:jar:metadata:@apps.version@
