--- a/stream-applications-release-train/pom.xml
+++ b/stream-applications-release-train/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
-        <version>3.2.1-SNAPSHOT</version>
+        <version>3.2.0</version>
         <relativePath>../applications/stream-applications-core/pom.xml</relativePath>
     </parent>
 
@@ -19,8 +19,8 @@
     </modules>
 
     <properties>
-        <revision>2021.1.1-SNAPSHOT</revision>
-        <apps.version>3.2.1-SNAPSHOT</apps.version>
+        <revision>2021.1.1</revision>
+        <apps.version>3.2.0</apps.version>
         <apps.harbor.version>3.2.0</apps.harbor.version>
         <apps.docker.tag>${apps.version}</apps.docker.tag>
     </properties>
