--- a/applications/source/time-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/source/time-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,2 +1,2 @@
 configuration-properties.classes=org.springframework.cloud.fn.supplier.time.TimeSupplierProperties,\
-  org.springframework.boot.autoconfigure.integration.IntegrationProperties$Poller
+  org.springframework.cloud.stream.config.DefaultPollerProperties
