--- a/applications/source/jdbc-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/source/jdbc-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,5 +1,5 @@
 configuration-properties.classes=org.springframework.cloud.fn.supplier.jdbc.JdbcSupplierProperties,\
-  org.springframework.cloud.stream.config.DefaultPollerProperties
+  org.springframework.boot.autoconfigure.integration.IntegrationProperties$Poller
 configuration-properties.names=\
 spring.datasource.url,\
 spring.datasource.driver-class-name,\
