--- a/applications/source/twitter-message-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/source/twitter-message-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,4 +1,4 @@
 configuration-properties.classes=org.springframework.cloud.fn.common.twitter.TwitterConnectionProperties,\
   org.springframework.cloud.fn.supplier.twitter.message.TwitterMessageSupplierProperties, \
-  org.springframework.cloud.stream.config.DefaultPollerProperties 
+  org.springframework.boot.autoconfigure.integration.IntegrationProperties$Poller 
 
