ensure baseimage version is in property that should be provided by stream-applications-core

--- a/spring-cloud-dataflow-apps-generator-plugin/src/test/resources/unit/http-source-apps/pom.xml
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/test/resources/unit/http-source-apps/pom.xml
@@ -21,6 +21,7 @@
 		<spring-cloud-dependencies.version>Hoxton.RELEASE</spring-cloud-dependencies.version>
 		<spring-cloud-stream-dependencies.version>Horsham.SR2</spring-cloud-stream-dependencies.version>
 		<spring-cloud-function-dependencies.version>3.0.2.RELEASE</spring-cloud-function-dependencies.version>
+		<apps.base-image>springcloud/baseimage:1.0.0</apps.base-image>
 	</properties>
 
 	<build>
@@ -139,7 +140,7 @@
 											<configuration>
 												<![CDATA[
 													<from>
-														<image>springcloud/baseimage:1.0.0</image>
+														<image>${apps.base-image}</image>
 													</from>
 													<to>
 														<image>springcloudstream:${project.artifactId}:3.0.0.BUILD-SNAPSHOT</image>
