--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -19,13 +19,13 @@
         <revision>3.2.1-SNAPSHOT</revision>
         <stream-apps-core.version>${revision}</stream-apps-core.version>
         <java-functions.version>1.2.0</java-functions.version>
-        <apps.base-image>springcloud/baseimage:1.0.0</apps.base-image>
+        <apps.base-image>springcloud/baseimage:1.0.1</apps.base-image>
         <mockserver.version>5.10</mockserver.version>
         <spring-cloud-stream-dependencies.version>3.2.2</spring-cloud-stream-dependencies.version>
         <spring-cloud-stream.version>3.2.2</spring-cloud-stream.version>
-        <spring-cloud-dataflow-apps-generator-plugin.version>1.0.6</spring-cloud-dataflow-apps-generator-plugin.version>
-        <spring-cloud-dataflow-apps-docs-plugin.version>1.0.6</spring-cloud-dataflow-apps-docs-plugin.version>
-        <spring-cloud-dataflow-apps-metadata-plugin.version>1.0.6</spring-cloud-dataflow-apps-metadata-plugin.version>
+        <spring-cloud-dataflow-apps-generator-plugin.version>1.0.7-SNAPSHOT</spring-cloud-dataflow-apps-generator-plugin.version>
+        <spring-cloud-dataflow-apps-docs-plugin.version>1.0.7-SNAPSHOT</spring-cloud-dataflow-apps-docs-plugin.version>
+        <spring-cloud-dataflow-apps-metadata-plugin.version>1.0.7-SNAPSHOT</spring-cloud-dataflow-apps-metadata-plugin.version>
         <java-cfenv-boot.version>2.1.2.RELEASE</java-cfenv-boot.version>
         <prometheus-rsocket.version>1.3.0</prometheus-rsocket.version>
         <!-- Boot 2.4.x needs wavefront-spring-boot version 2.1.0-RC1+ -->
