--- a/applications/source/http-source/pom.xml
+++ b/applications/source/http-source/pom.xml
@@ -12,6 +12,7 @@
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
         <version>3.2.1-SNAPSHOT</version>
+        <relativePath/>
     </parent>
 
     <dependencies>
