GH-195: Introduce IntegrationComponentCustomizer
Fixes https://github.com/spring-cloud/stream-applications/issues/195

There is no way to add a complex configuration to central components
of the functions: sometimes just plain configuration properties are not enough

* Introduce a `IntegrationComponentCustomizer` contract to be exposed in
the end-user configuration for particular Integration bean type
* Expose a `IntegrationComponentCustomizerBeanPostProcessor` as an auto-configured
bean to apply `IntegrationComponentCustomizer` for particular bean type if any
* Move `config-common` to functions parent to make the mentioned auto-configuration
available for all the functions
* Remove some other duplicated dependencies from the affected poms

--- a/functions/spring-functions-parent/pom.xml
+++ b/functions/spring-functions-parent/pom.xml
@@ -20,7 +20,11 @@
 	</properties>
 
 	<dependencies>
-
+		<dependency>
+			<groupId>org.springframework.cloud.fn</groupId>
+			<artifactId>config-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		<!-- Spring Boot dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
