Update to Spring Boot 2.7.0
Fixes #272

--- a/applications/sink/jdbc-sink/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/sink/jdbc-sink/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -4,6 +4,6 @@ spring.datasource.url,\
 spring.datasource.driver-class-name,\
 spring.datasource.username,\
 spring.datasource.password,\
-spring.datasource.schema,\
-spring.datasource.data,\
-spring.datasource.initialization-mode
+spring.sql.init.schema-locations,\
+spring.sql.init.data-locations,\
+spring.sql.init.mode
