--- a/functions/function/twitter-function/pom.xml
+++ b/functions/function/twitter-function/pom.xml
@@ -25,13 +25,13 @@
 		<dependency>
 			<groupId>org.mock-server</groupId>
 			<artifactId>mockserver-netty</artifactId>
-			<version>5.10</version>
+			<version>${mock-server.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mock-server</groupId>
 			<artifactId>mockserver-client-java</artifactId>
-			<version>5.10</version>
+			<version>${mock-server.version}</version>
 			<scope>test</scope>
 		</dependency>
 
