--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -40,7 +40,7 @@
 		<nohttp-checkstyle.version>0.0.2.RELEASE</nohttp-checkstyle.version>
 		<disable.nohttp.checks>true</disable.nohttp.checks>
 		<spring-javaformat-checkstyle.version>0.0.7</spring-javaformat-checkstyle.version>
-		<spring-boot.version>2.6.7</spring-boot.version>
+		<spring-boot.version>2.7.0</spring-boot.version>
 		<spring-kafka.version>2.8.6</spring-kafka.version>
 		<spring-rabbit.version>2.4.5</spring-rabbit.version>
 		<spring-cloud-function.version>3.2.3</spring-cloud-function.version>
@@ -49,6 +49,7 @@
 		<test-containers.version>1.16.3</test-containers.version>
 		<maven-flatten-plugin.version>1.2.5</maven-flatten-plugin.version>
 		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+		<mock-server.version>5.13.2</mock-server.version>
 	</properties>
 	<url>https://spring.io/projects/spring-cloud-stream-applications</url>
 	<developers>
