--- a/functions/common/config-common/pom.xml
+++ b/functions/common/config-common/pom.xml
@@ -4,9 +4,9 @@
 
     <parent>
         <groupId>org.springframework.cloud.fn</groupId>
-        <artifactId>spring-functions-parent</artifactId>
+        <artifactId>java-functions-parent</artifactId>
         <version>${revision}</version>
-        <relativePath>../../spring-functions-parent</relativePath>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>config-common</artifactId>
