--- a/applications/source/file-source/pom.xml
+++ b/applications/source/file-source/pom.xml
@@ -10,9 +10,8 @@
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
-        <artifactId>stream-applications-source</artifactId>
+        <artifactId>source-parent</artifactId>
         <version>3.2.1-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <dependencies>
@@ -62,7 +61,4 @@
             </plugin>
         </plugins>
     </build>
-
-
-
 </project>
