--- a/applications/source/pom.xml
+++ b/applications/source/pom.xml
@@ -5,10 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.springframework.cloud.stream.app</groupId>
-    <artifactId>stream-applications-source</artifactId>
+    <artifactId>source-parent</artifactId>
     <version>3.2.1-SNAPSHOT</version>
     <name>source</name>
-    <description>Stream Applications Source Parent</description>
+    <description>Stream Applications Source Apps Parent</description>
     <packaging>pom</packaging>
 
     <parent>
