--- a/applications/source/twitter-stream-source/pom.xml
+++ b/applications/source/twitter-stream-source/pom.xml
@@ -10,9 +10,8 @@
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
-        <artifactId>stream-applications-core</artifactId>
+        <artifactId>source-parent</artifactId>
         <version>3.2.1-SNAPSHOT</version>
-        <relativePath/>
     </parent>
 
     <dependencies>
@@ -28,13 +27,13 @@
         <dependency>
             <groupId>org.mock-server</groupId>
             <artifactId>mockserver-netty</artifactId>
-	        <version>${mockserver.version}</version>
+            <version>${mockserver.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mock-server</groupId>
             <artifactId>mockserver-client-java</artifactId>
-	        <version>${mockserver.version}</version>
+            <version>${mockserver.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
