Fix CI build - source and sink app share repsoitories in new parent pom.xml

--- a/applications/source/zeromq-source/pom.xml
+++ b/applications/source/zeromq-source/pom.xml
@@ -13,6 +13,7 @@
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>source-parent</artifactId>
         <version>3.2.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <dependencies>
