--- a/applications/source/geode-source/pom.xml
+++ b/applications/source/geode-source/pom.xml
@@ -10,10 +10,10 @@
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
-        <artifactId>stream-applications-source</artifactId>
+        <artifactId>stream-applications-core</artifactId>
         <version>3.2.1-SNAPSHOT</version>
+        <relativePath/>
     </parent>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud.fn</groupId>
