WIP: Only to show already committed changes

--- a/.mvn/maven.config
+++ b/.mvn/maven.config
@@ -1,1 +1,3 @@
 -DaltSnapshotDeploymentRepository=repo.spring.io::default::https://repo.spring.io/libs-snapshot-local -P spring,spring-repos
+
+// BONO: Added the spring-repos as the extension replaces the profiles, but we want them to merge the content so we rename
