--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -94,4 +94,5 @@
 		<module>function-dependencies</module>
 	</modules>
 
+	<!-- BONO: Removed the <repositories/pluginRepositories> -->
 </project>
