--- a/applications/processor/http-request-processor/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/processor/http-request-processor/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,2 +1,3 @@
 configuration-properties.classes=org.springframework.cloud.fn.http.request.HttpRequestFunctionProperties
+configuration-properties.names=maximumBufferSize
 
