--- a/applications/processor/http-request-processor/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/processor/http-request-processor/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,2 +1,2 @@
 configuration-properties.classes=org.springframework.cloud.fn.http.request.HttpRequestFunctionProperties
-
+configuration-properties.names=spring.codec.max-in-memory-size
