--- a/applications/processor/twitter-trend-processor/pom.xml
+++ b/applications/processor/twitter-trend-processor/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>twitter-trend-processor</artifactId>
     <name>twitter-trend-processor</name>
     <description>twitter trend processor apps</description>
-    <version>3.2.1</version>
+    <version>${revision}</version>
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
