--- a/applications/sink/pom.xml
+++ b/applications/sink/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.springframework.cloud.stream.app</groupId>
     <artifactId>sink</artifactId>
-    <version>3.2.1-SNAPSHOT</version>
+    <version>3.2.1</version>
     <packaging>pom</packaging>
 
     <modules>
