--- a/applications/source/geode-source/pom.xml
+++ b/applications/source/geode-source/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
-        <version>3.2.1</version>
+        <version>3.2.2-SNAPSHOT</version>
         <relativePath/>
     </parent>
     <dependencies>
